crates/term/src/snapshots/tome__tests__tests__render_empty.snap
---
source: crates/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
"                                                                                "
