crates/term/src/snapshots/tome__tests__tests__render_with_content.snap
---
source: crates/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 Hello, World!                                                               "
"  2 This is a test.                                                             "
"  3 Line 3.                                                                     "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
"                                                                                "
