crates/term/src/snapshots/tome__tests__tests__soft_wrap_word_boundary.snap
---
source: crates/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 hello world this is a ····"
"  ┆ test of word wrapping ····"
"  ┆ behavior                  "
"  ~                           "
"  ~                           "
"  ~                           "
"  ~                           "
"  ~                           "
" NORMAL  test.txt  1:1  Top   "
"                              "
